# rakali

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  README.rst  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: stale.yml
examples/: canny_viewer.py  disparity.py  image_show.py  ipcam_viewer.py  record_canny.py  show_colors.py  skeletonize.py  text.py  usb_canny_viewer.py  usb_viewer.py
src/: facedetect.py
src/rakali/: .#img.py  __init__.py  annotate.py  colors.py  discover.py  img.py  stream.py  transforms.py  video.py  video_reader.py  video_writer.py
src/rakali/camera/: __init__.py  chessboard.py  fisheye.py  fisheye_stereo.py  pinhole.py  save.py
src/rakali/cli/: calibrate_fisheye.py  calibrate_fisheye_stereo.py  calibrate_pinhole.py  disparity_fisheye.py  disparity_fisheye_stereo.py  find_chessboards_live.py  find_chessboards_recording.py  find_chessboards_stereo_live.py  find_ip_cameras.py  show.py  split_feed.py  undistort_fisheye.py  undistort_fisheye_image.py  undistort_fisheye_stereo.py  undistort_pinhole.py  view_feed.py  view_stereo_feed.py  view_stereo_feed_corrected.py
src/rakali/stereo/: __init__.py  reader.py
src/rakali/testimages/: __init__.py
src/rakali/video/: __init__.py  fps.py  player.py  reader.py  writer.py
